[gd_scene load_steps=3 format=3 uid="uid://bek72t2lcaiq2"]

[ext_resource type="Theme" uid="uid://co08a2cr03n28" path="res://resources/main_theme.tres" id="1_bocrj"]
[ext_resource type="Script" path="res://scenes/create_timer_popup.gd" id="1_c0ds0"]

[node name="CreateTimerPopup" type="Window"]
title = "Uus taimer"
initial_position = 1
size = Vector2i(300, 200)
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("1_c0ds0")

[node name="Control" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bocrj")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Loo uus taimer
"

[node name="NameLine" type="LineEdit" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Uus taimer"

[node name="Seconds" type="LineEdit" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "sekundid"

[node name="Minutes" type="LineEdit" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "minutid"

[node name="Hours" type="LineEdit" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "tunnid"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sobib"

[node name="CancelButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Katkesta"
